# weather-intelligence

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/weather_intelligence/: __init__.py  http_client.py  server.py  validation.py
