[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-intelligence"
version = "0.1.0"
description = "Weather Intelligence MCP Server - outdoor activity, surf conditions, and garden watering advice"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
weather-intelligence-server = "weather_intelligence.server:main"
